# second_brain_os

./: .gitignore  CLAUDE_DESKTOP_SETUP.md  KIMI_SETUP.md  LICENSE  QUICKSTART.md  README.md  claude.md  kimi_mcp_config.json  pyproject.toml
.kimi/skills/second-brain/: SKILL.md
brainos/: __init__.py
brainos/agents/: __init__.py  agent_base.py  drafting_agent.py  orchestrator.py  publishing_agent.py  reflection_agent.py  reflection_analyzer.py  research_agent.py
brainos/context_engineering/: __init__.py  orchestrator.py  packer_base.py  packing.py  retriever_base.py  selection.py
brainos/core/: __init__.py  config_loader.py  models.py  moonshot_client.py
brainos/knowledge/: __init__.py  chunker_base.py  embedding_base.py  vector_store_base.py
brainos/knowledge/chunking/: __init__.py  heading_chunker.py
brainos/knowledge/embedding/: __init__.py  anthropic_embedder.py  sentence_transformers_embedder.py
brainos/knowledge/graph/: __init__.py  graph_builder.py
brainos/knowledge/ingestion/: __init__.py  pipeline.py
brainos/knowledge/obsidian/: __init__.py  vault_adapter.py
brainos/knowledge/rag/: __init__.py  rag_engine.py
brainos/knowledge/vector_store/: __init__.py  chroma_store.py
brainos/mcp_servers/: __init__.py  claude_server.py  run_server.py  vault_server.py
brainos/orchestration/: __init__.py  agent_cli.py  cli.py
brainos/telemetry/: __init__.py  schema.py
config/: goals.yaml  paths.yaml  persona.yaml  routing.yaml
scripts/: generate_demo_vault.py  setup_your_vault.sh
